# voice-bot1

./: .env.example  .gitignore  Makefile  pyproject.toml  readme.md
configs/: bot.env.example
docker/: bot.dockerfile  docker-compose.yml
dockerfiles/: bot.dockerfile  docker-compose.dev.yml  docker-compose.yml
src/: run.py
src/bot/: __init__.py
src/bot/callbacks/: __init__.py  voices.py
src/bot/commands/: start.py
src/bot/inlines/: search.py
src/bot/utils/: __init__.py  decorators.py  text.py
src/migrations/versions/: 20220112_19:39_7afcfddb498b_create_table_voices.py  20220207_05:33_a81e4bcce244_create_table_categories.py  20220209_13:20_4419770493ca_create_table_voices.py  20220309_15:44_7c60ed9fe75c_create_table_user_voice_relations.py
src/models/: __init__.py  base.py  categories.py  user_voice_relation.py  voices.py
src/scripts/: add_voices_in_db.py
src/settings/: __init__.py  base.py  local.py  production.py
